--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/telaInicial.css">
-    <link rel ="apple-touch-icon"  href = "./assets/img/apple-touch-icon.png" >
+    <link rel="apple-touch-icon" href="./assets/img/apple-touch-icon.png">
     <link rel="manifest" href="../json/manifest.json">
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
     <title>Tela de Inicio</title>
 </head>
+
 <body>
     <header>
         <div class="img-logo">
-            <img src="./assets/img/QuerCaronaLogo2.png" alt="logo Quer Carona?" >
+            <img src="./assets/img/QuerCaronaLogo2.png" alt="logo Quer Carona?">
         </div>
     </header>
     <main>
@@ -32,9 +34,10 @@
                 <input type="submit" value="Continuar com a Apple" name="apple" class="configbutton selecion apple">
             </div>
             <div id="google">
-                <input id="txtgoogle" type="submit" value="Continuar com o Google" name="google" class="configbutton selecion apple">
+                <input id="txtgoogle" type="submit" value="Continuar com o Google" name="google"
+                    class="configbutton selecion apple">
             </div>
-            
+
         </div>
     </main>
     <footer class="footerInformacoes">
@@ -42,4 +45,5 @@
             carona, você concorda com esse uso de cokkies. <a href="#" class="footer-link">Saber mais</a></p>
     </footer>
 </body>
+
 </html>
