--- a/public/perfil_conta.html
+++ b/public/perfil_conta.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,12 +10,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel ="apple-touch-icon"  href = "./assets/img/apple-touch-icon.png" >
+    <link rel="apple-touch-icon" href="./assets/img/apple-touch-icon.png">
     <link rel="manifest" href="../json/manifest.json">
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
     <title>Quer Carona?</title>
 
 </head>
+
 <body>
     <header>
         <div class="btns__header-caixa">
@@ -24,88 +26,88 @@
             <a href="./perfil_conta.html" class="btn__header btn__header-ativo">
                 Conta
             </a>
-         </div>
+        </div>
     </header>
     <main class="box__corpo--conta box__suasViagens">
         <section class="secao__corpo--conta">
-          <ul class="lista__corpo">
-            <li class="lista__corpo-item">
-                <a href="#.html" class="lista__corpo-link">
-                    <p class="lista__corpo-texto" >Avaliação</p>
-                    <img src="./assets/icons/setadireita.svg" alt="" class="">
-                </a>
-            </li>
-            <li class="lista__corpo-item">
-                <a href="#.html" class="lista__corpo-link">
-                    <p class="lista__corpo-texto" >Notificaões, e-mails e SMS</p>
-                    <img src="./assets/icons/setadireita.svg" alt="" class="">
-                </a>
-            </li>
-            <li class="lista__corpo-item">
-                <a href="#.html" class="lista__corpo-link">
-                    <p class="lista__corpo-texto" >Modo escuro</p>
-                    <img src="./assets/icons/setadireita.svg" alt="" class="">
-                </a>
-            </li>
-            <li class="lista__corpo-item">
-                <a href="#.html" class="lista__corpo-link">
-                    <p class="lista__corpo-texto" >Senha</p>
-                    <img src="./assets/icons/setadireita.svg" alt="" class="">
-                </a>
-            </li>
-            <li class="lista__corpo-item">
-                <a href="#.html" class="lista__corpo-link">
-                    <p class="lista__corpo-texto" >Endereço</p>
-                    <img src="./assets/icons/setadireita.svg" alt="" class="">
-                </a>
-            </li>
-            <li class="lista__corpo-item">
-                <a href="#.html" class="lista__corpo-link">
-                    <p class="lista__corpo-texto" >Avalie o app</p>
-                    <img src="./assets/icons/setadireita.svg" alt="" class="">
-                </a>
-            </li>
-            <li class="lista__corpo-item">
-                <a href="#.html" class="lista__corpo-link">
-                    <p class="lista__corpo-texto" >Ajuda</p>
-                    <img src="./assets/icons/setadireita.svg" alt="" class="">
-                </a>
-            </li>
-            <li class="lista__corpo-item">
-                <a href="#.html" class="lista__corpo-link">
-                    <p class="lista__corpo-texto" >Termos de uso</p>
-                    <img src="./assets/icons/setadireita.svg" alt="" class="">
-                </a>
-            </li>
-            <li class="lista__corpo-item">
-                <a href="#.html" class="lista__corpo-link">
-                    <p class="lista__corpo-texto" >Proteção de dados</p>
-                    <img src="./assets/icons/setadireita.svg" alt="" class="">
-                </a>
-            </li>
-            
-          </ul>
+            <ul class="lista__corpo">
+                <li class="lista__corpo-item">
+                    <a href="#.html" class="lista__corpo-link">
+                        <p class="lista__corpo-texto">Avaliação</p>
+                        <img src="./assets/icons/setadireita.svg" alt="" class="">
+                    </a>
+                </li>
+                <li class="lista__corpo-item">
+                    <a href="#.html" class="lista__corpo-link">
+                        <p class="lista__corpo-texto">Notificaões, e-mails e SMS</p>
+                        <img src="./assets/icons/setadireita.svg" alt="" class="">
+                    </a>
+                </li>
+                <li class="lista__corpo-item">
+                    <a href="#.html" class="lista__corpo-link">
+                        <p class="lista__corpo-texto">Modo escuro</p>
+                        <img src="./assets/icons/setadireita.svg" alt="" class="">
+                    </a>
+                </li>
+                <li class="lista__corpo-item">
+                    <a href="#.html" class="lista__corpo-link">
+                        <p class="lista__corpo-texto">Senha</p>
+                        <img src="./assets/icons/setadireita.svg" alt="" class="">
+                    </a>
+                </li>
+                <li class="lista__corpo-item">
+                    <a href="#.html" class="lista__corpo-link">
+                        <p class="lista__corpo-texto">Endereço</p>
+                        <img src="./assets/icons/setadireita.svg" alt="" class="">
+                    </a>
+                </li>
+                <li class="lista__corpo-item">
+                    <a href="#.html" class="lista__corpo-link">
+                        <p class="lista__corpo-texto">Avalie o app</p>
+                        <img src="./assets/icons/setadireita.svg" alt="" class="">
+                    </a>
+                </li>
+                <li class="lista__corpo-item">
+                    <a href="#.html" class="lista__corpo-link">
+                        <p class="lista__corpo-texto">Ajuda</p>
+                        <img src="./assets/icons/setadireita.svg" alt="" class="">
+                    </a>
+                </li>
+                <li class="lista__corpo-item">
+                    <a href="#.html" class="lista__corpo-link">
+                        <p class="lista__corpo-texto">Termos de uso</p>
+                        <img src="./assets/icons/setadireita.svg" alt="" class="">
+                    </a>
+                </li>
+                <li class="lista__corpo-item">
+                    <a href="#.html" class="lista__corpo-link">
+                        <p class="lista__corpo-texto">Proteção de dados</p>
+                        <img src="./assets/icons/setadireita.svg" alt="" class="">
+                    </a>
+                </li>
+
+            </ul>
         </section>
 
         <button onclick="window.location.href = '../index.html'" class="btn__sair--conta">Sair</button>
 
 
         <button class="btn__sair--conta">
-            <p class= "texto__btn--sai">Encerrar conta</p>
-        </button>    
+            <p class="texto__btn--sai">Encerrar conta</p>
+        </button>
     </main>
-    <footer class= "box__rodape">
+    <footer class="box__rodape">
         <ul class="rodape__lista">
             <li class="rodape__lista--item">
                 <a href="./pegarCarona.html" class="rodape__lista--link">
                     <img src="./assets/icons/procurar.svg" alt="icone de procurar" class="rodape__lista--img">
-                    <p class="rodape__lista-texto" >Procurar</p>
+                    <p class="rodape__lista-texto">Procurar</p>
                 </a>
             </li>
             <li class="rodape__lista--item">
                 <a href="./oferecer.html" class="rodape__lista--link">
                     <img src="./assets/icons/oferecer.svg" alt="icone de oferecer" class="rodape__lista--img">
-                    <p class="rodape__lista-texto  " >Oferecer</p>
+                    <p class="rodape__lista-texto  ">Oferecer</p>
                 </a>
             </li>
             <li class="rodape__lista--item">
@@ -122,11 +124,13 @@
             </li>
             <li class="rodape__lista--item">
                 <a href="./perfil.html" class="rodape__lista--link">
-                    <img src="./assets/icons/abaperfil-ativo.svg" alt="icone de configuracao" class="rodape__lista--img">
+                    <img src="./assets/icons/abaperfil-ativo.svg" alt="icone de configuracao"
+                        class="rodape__lista--img">
                     <p class="rodape__lista-texto rodape__lista-texto-ativo">Perfil</p>
                 </a>
             </li>
         </ul>
     </footer>
 </body>
+
 </html>
