--- a/public/suasViagens.html
+++ b/public/suasViagens.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,12 +10,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel ="apple-touch-icon"  href = "./assets/img/apple-touch-icon.png" >
+    <link rel="apple-touch-icon" href="./assets/img/apple-touch-icon.png">
     <link rel="manifest" href="../json/manifest.json">
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
     <title>Quer Carona?</title>
 
 </head>
+
 <body>
     <header class="box__header">
         <div class="boxbox__header">
@@ -22,7 +24,7 @@
             <span class="secao__header-texto">
                 <p class="secao__header-texto2">Carlos Luz</p>
                 <p class="secao__header-texto3">Bio</p>
-                </span>
+            </span>
             <img src="./assets/icons/notifications.svg" alt="icone de notificacao" class="secao__header-icone">
         </div>
     </header>
@@ -34,21 +36,22 @@
             <img src="./assets/icons/hamburguer.svg" alt="imagem ddo menu hamburguer" class="box__corpo--img">
         </div>
         <p class="secao__suasViagens--texto">
-            Encontre a carona perfeita entre vários destinos ou publique sua carona e veja se alguem está indo para o mesmo destino que o seu, ainda há uma chance de receber uma gorjeta.
+            Encontre a carona perfeita entre vários destinos ou publique sua carona e veja se alguem está indo para o
+            mesmo destino que o seu, ainda há uma chance de receber uma gorjeta.
         </p>
     </main>
-    <footer class= "box__rodape">
+    <footer class="box__rodape">
         <ul class="rodape__lista">
             <li class="rodape__lista--item">
                 <a href="./pegarCarona.html" class="rodape__lista--link">
                     <img src="./assets//icons/procurar.svg" alt="icone de procurar" class="rodape__lista--img">
-                    <p class="rodape__lista-texto" >Procurar</p>
+                    <p class="rodape__lista-texto">Procurar</p>
                 </a>
             </li>
             <li class="rodape__lista--item">
                 <a href="./oferecer.html" class="rodape__lista--link">
                     <img src="./assets//icons/oferecer.svg" alt="icone de oferecer" class="rodape__lista--img">
-                    <p class="rodape__lista-texto  " >Oferecer</p>
+                    <p class="rodape__lista-texto  ">Oferecer</p>
                 </a>
             </li>
             <li class="rodape__lista--item">
@@ -72,4 +75,5 @@
         </ul>
     </footer>
 </body>
+
 </html>
