--- a/public/perfil.html
+++ b/public/perfil.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,12 +10,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel ="apple-touch-icon"  href = "./assets/img/apple-touch-icon.png" >
+    <link rel="apple-touch-icon" href="./assets/img/apple-touch-icon.png">
     <link rel="manifest" href="../json/manifest.json">
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
     <title>Quer Carona?</title>
 
 </head>
+
 <body>
     <header>
         <div class="btns__header-caixa">
@@ -24,7 +26,7 @@
             <a href="./perfil_conta.html" class="btn__header">
                 Conta
             </a>
-         </div>
+        </div>
     </header>
     <main class="box__corpo--perfil box__suasViagens menu__opcoes--ativo ">
         <section class="secao__corpo--perfil">
@@ -41,11 +43,11 @@
             <div class="secao__opcoes--perfil">
                 <img src="./assets/img/perfil1.png" alt="Imagem de Perfil" class="secao__header-img">
                 <a href="perfil-opcoes.html" class="rodape__lista--link slide " aria-label="Opções">
-                <img src="./assets/icons/setadireita.svg" alt="icone de seta de proxima aba">
+                    <img src="./assets/icons/setadireita.svg" alt="icone de seta de proxima aba">
                 </a>
             </div>
         </section>
-        
+
         <div class="box__lista-perfil">
             <ul class="lista__perfil">
                 <h3 class="titulo__lista-perfil">
@@ -100,18 +102,18 @@
             </ul>
         </div>
     </main>
-    <footer class= "box__rodape">
+    <footer class="box__rodape">
         <ul class="rodape__lista">
             <li class="rodape__lista--item">
                 <a href="./pegarCarona.html" class="rodape__lista--link">
                     <img src="./assets/icons/procurar.svg" alt="icone de procurar" class="rodape__lista--img">
-                    <p class="rodape__lista-texto" >Procurar</p>
+                    <p class="rodape__lista-texto">Procurar</p>
                 </a>
             </li>
             <li class="rodape__lista--item">
                 <a href="./oferecer.html" class="rodape__lista--link">
                     <img src="./assets/icons/oferecer.svg" alt="icone de oferecer" class="rodape__lista--img">
-                    <p class="rodape__lista-texto  " >Oferecer</p>
+                    <p class="rodape__lista-texto  ">Oferecer</p>
                 </a>
             </li>
             <li class="rodape__lista--item">
@@ -128,11 +130,13 @@
             </li>
             <li class="rodape__lista--item">
                 <a href="perfil.html" class="rodape__lista--link">
-                    <img src="./assets/icons/abaperfil-ativo.svg" alt="icone de configuracao" class="rodape__lista--img">
+                    <img src="./assets/icons/abaperfil-ativo.svg" alt="icone de configuracao"
+                        class="rodape__lista--img">
                     <p class="rodape__lista-texto rodape__lista-texto-ativo">Perfil</p>
                 </a>
             </li>
         </ul>
     </footer>
 </body>
+
 </html>
