--- a/public/criarConta.html
+++ b/public/criarConta.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <div>
-            <form action="" class="container-criarConta form" id="form">
+            <form action="" class="container-criarConta form" id="formEmail">
                 <h2>
                     Crie sua conta gratuita
                 </h2>
@@ -33,6 +33,9 @@
                     <span class="error-message" >Email inválido</span>
                 </div>
                 <button type="submit" onclick="" class="botao-continuar">Continuar com Email  </button>
+
+
+
                 <span class="login">Já possui uma conta
                     <button onclick="window.location.href = './login.html'" class="botao-continuar--login">Login</button> 
                 </span>
