tela de login, celular e algumas correções de css

--- a/public/cadastroNome.html
+++ b/public/cadastroNome.html
@@ -24,7 +24,7 @@
     </header>
     <main>
         <div>
-            <form action="./cadastrandoDataNasc.html" class="container-Nome formNome" id="formNome">
+            <form action="./numCelular.html" class="container-Nome formNome" id="formNome">
                 <h2>
                     Qual é o seu nome?
                 </h2>
