--- a/public/criarConta.html
+++ b/public/criarConta.html
@@ -36,7 +36,7 @@
 
 
 
-                <span class="login">Já possui uma conta
+                <span class="login">Já possui uma conta ?
                     <button onclick="window.location.href = './login.html'" class="botao-continuar--login">Login</button> 
                 </span>
 
