ajeitando tela do numero do celular

--- a/public/numCelular.html
+++ b/public/numCelular.html
@@ -31,7 +31,7 @@
                 </h2>
                 <div class="cadastrarNome">
                     
-                    <input required type="tel" name="Num" autocomplete="on" class="inserirNome" id="logobr" placeholder="(DDD)- Número do celular" pattern="[0-9]{2}-[0-9]{5}-[0-9]{4}">
+                    <input required type="tel" name="Num" autocomplete="on" class="inserirNome" id="logobr" placeholder="(DDD) Número do celular" pattern="[0-9]{2}[0-9]{5}[0-9]{4}"  title="Somente Números">
                     
                     <button type="submit" class="botao-continuar" value="submit" id="submit">Continuar</button>
                 </div>
