ajeitando tela do numero do celular

--- a/public/criandosenha.html
+++ b/public/criandosenha.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <button onclick="window.location.href = './cadastrandoDataNasc.html'" class="setaES"><img class="seta" src="./assets/icons/setaES.svg" alt="imagem da seta"></button>
+        <button onclick="window.location.href = './numCelular.html'" class="setaES"><img class="seta" src="./assets/icons/setaES.svg" alt="imagem da seta"></button>
         <div class="img-logo-criar">
             <img src="./assets/img/QuerCaronaLogo2.png" alt="logo Quer Carona?" >
         </div>
